--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<name>rit-service</name>
 	<description>Rit Microservice</description>
 	<properties>
+		<sonar.organization>julesd2001</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<java.version>8</java.version>
 	</properties>
 	<dependencies>
