--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url = jdbc:mysql://${MYSQL_DB_HOST:localhost}:\
   ${MYSQL_DB_PORT:3306}/rit_mysql?createDatabaseIfNotExist=true
 spring.datasource.username = ${MYSQL_DB_USERNAME:root}
